2002-01-18  Mo DeJong  <mdejong@users.sourceforge.net>

	* new_features.txt: Add note about new socket
	command.
	* docs/TclJava/JavaImportCmd.html: Attempt to
	make it more clear that importing all classes
	from a package is not supported by the
	java::import command.
	* src/jacl/tcl/lang/ExecCmd.java: Don't include
	InterruptedException in throws declaration for
	methods that can't raise this exception.
	* src/jacl/tcl/lang/OpenCmd.java (cmdProc): Avoid
	calling unnecessary TclString constructor.
	* src/jacl/tcl/lang/PutsCmd.java (cmdProc): When
	writing out a string with a newline, invoke the
	write method of the channel driver twice to match
	Tcl's implementation.
	* src/tcljava/tcl/lang/TclString.java: Update
	comment for newInstance method to make it clear
	that a passed in StringBuffer should not be
	modified by the caller.

2002-01-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/README: Update README so that it is
	clear the tests are for Tcl/Java commands.
	Describe running on make shell and make test.
	Remove unneeded sections.
	
2002-01-15  Shawn Boyce  <shawn@qcominc.com>

	* src/jacl/tcl/lang/ExecCmd.java
	(cmdProc, execWin, execReflection):
	Use new Runtime.exec API to avoid PWD hack
	with JDK 1.3 or newer. The API is called
	via reflection so that code can continue
	to be compiled on a JDK 1.1 system.
	Update the system name check in execWin
	to work with Windows 2000.

2002-01-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/SocketChannel.java
	(read, write, close, flush): Don't retain a
	errorMsg member since it is not used anywhere
	and makes things more complex.

2002-01-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Add JDB_ATTACH_FLAGS to deal
	with version specific arguments for jdb.
	Rework the jdb_jacl rule so that it uses
	these new command line arguments.
	* configure: Regen.
	* configure.in: Subst JDB_ATTACH_FLAGS.
	* tcljava.m4 (AC_JAVA_TOOLS): Set JAVA_G_FLAGS